ver 1.0.3 : update demo

--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
             {
                 "language": "python",
                 "path": "./snippets/python.json"
+            },
+            {
+                "language": "python",
+                "path": "./snippets/keywords.json"
             }
         ]
     }
