--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "type": "git",
         "url": "https://github.com/Take-Me1010/pykv-snippets"
     },
-    "license": "SEE LICENSE IN LICENSE",
-    "version": "1.0.6",
+    "license": "SEE LICENSE(MIT)",
+    "version": "1.0.7",
     "engines": {
         "vscode": "^1.47.0"
     },
