--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "type": "git",
         "url": "https://github.com/Take-Me1010/pykv-snippets"
     },
+    "icon": "image/icon.png",
     "license": "SEE LICENSE(MIT)",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "engines": {
         "vscode": "^1.47.0"
     },
